[gd_scene load_steps=6 format=3 uid="uid://cfx67xt0p3i2j"]

[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/GDScript/dialogueManager.gd" id="1_uc001"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/GDScript/dialogueCore.gd" id="2_iarht"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/GDScript/dialogueUI.gd" id="4_cg41r"]
[ext_resource type="Texture2D" uid="uid://bucad3kf5mxvp" path="res://addons/dialogue_nodes/icons/Play.svg" id="5_dn2to"]
[ext_resource type="Script" path="res://addons/dialogue_nodes/objects/GDScript/dialogueInput.gd" id="10_2l4cv"]

[node name="DialogueWindow" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
mouse_filter = 2
script = ExtResource("1_uc001")

[node name="DialogueCore" type="Node" parent="."]
script = ExtResource("2_iarht")

[node name="DialogueUI" type="Panel" parent="." node_paths=PackedStringArray("speaker", "speakerPortrait", "dialogue", "optionsButtons")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -318.0
offset_top = -109.5
offset_right = 318.0
offset_bottom = 109.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_cg41r")
nextIcon = ExtResource("5_dn2to")
speaker = NodePath("MarginContainer/HBoxContainer/VBoxContainer/SpeakerLabel")
speakerPortrait = NodePath("MarginContainer/HBoxContainer/PortraitTexture")
dialogue = NodePath("MarginContainer/HBoxContainer/VBoxContainer/DialogueTxt")
optionsButtons = [NodePath("MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button"), NodePath("MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button2"), NodePath("MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button3"), NodePath("MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/Button4")]
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="DialogueUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5
metadata/_edit_lock_ = true

[node name="DialogueInput" type="Control" parent="DialogueUI/MarginContainer"]
layout_mode = 2
script = ExtResource("10_2l4cv")

[node name="HBoxContainer" type="HBoxContainer" parent="DialogueUI/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="PortraitTexture" type="TextureRect" parent="DialogueUI/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(120, 120)
layout_mode = 2
mouse_filter = 2
expand_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DialogueUI/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 8

[node name="SpeakerLabel" type="Label" parent="DialogueUI/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="DialogueTxt" type="RichTextLabel" parent="DialogueUI/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
bbcode_enabled = true

[node name="HBoxContainer" type="HBoxContainer" parent="DialogueUI/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 2

[node name="Button" type="Button" parent="DialogueUI/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Option 1"

[node name="Button2" type="Button" parent="DialogueUI/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Option 2"

[node name="Button3" type="Button" parent="DialogueUI/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Option 3"

[node name="Button4" type="Button" parent="DialogueUI/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Option 4"
